<resources>
    <string name="app_name">OnlineMusicPlayer</string>
    <string name="action_shuffle_false">Shuffle:False</string>
    <string name="action_shuffle_true">Shuffle:True</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="offline_music">Offline Music</string>
    <string name="playlists">Playlists</string>
    <string name="music_ranking">Music Ranking</string>
    <string name="artist">Artist</string>
    <string name="performer">Performer</string>
    <string name="allsongs">Songs</string>
    <string name="downloads">Downloads</string>
    <string name="recentplay">Recent</string>
    <string name="music_lib">Music Library</string>
    <string name="nowplaying">Now Playing</string>
    <string name="action_stop">End</string>
    <string name="action_reset">Reset</string>
</resources>
