<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/offline_music"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/allsongs"
        android:textSize="15dp"
        android:id="@+id/allsongs"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/recentplay"
        android:textSize="15dp"
        android:id="@+id/recentplay"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/downloads"
        android:textSize="15dp"
        android:id="@+id/downloads"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playlists"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"/>
    <ListView
        android:id="@+id/playlists_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>