<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:icon="@drawable/icon_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />


    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_shuffle"
        android:title="@string/action_shuffle"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reset"
        android:title="@string/action_reset"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_end"
        android:title="@string/action_stop"
        app:showAsAction="never"/>
</menu>